--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -16,3 +16,11 @@ hr {
   margin: 0 auto;
   width: 32px;
 }
+
+.contactData {
+  color: ghostwhite;
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+}
